@@ -336,7 +336,7 @@ AC_ARG_ENABLE(sharing,
         AC_HELP_STRING([--disable-sharing],
         [Don't compile in DNS-SD key sharing]))
 
-if test "$enable_pgp" != "no"; then
+if test "$enable_pgp" != "yes"; then
 	echo "DNS-SD key sharing requires PGP support"
 	enable_sharing=no
 fi
