@@ -1,5 +1,15 @@
 2008-07-15  Stef Walter  <stef@memberwebs.com>
 
+	* daemon/seahorse-dbus-server.c:
+	* libseahorse/seahorse-context.c:
+	* libseahorse/seahorse-dns-sd.c:
+	* pgp/seahorse-pgp-source.c:
+	* src/main.c:
+	* configure.in: Complete decoupling from GPGME. Seahorse
+	should now be buildable without GPGME or GnuPG.
+	
+2008-07-15  Stef Walter  <stef@memberwebs.com>
+
 	* daemon/Makefile.am:
 	* daemon/seahorse-daemon.c:
 	* daemon/seahorse-service.c:
